--- a/halaman-jelajahi.html
+++ b/halaman-jelajahi.html
@@ -11,7 +11,7 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #000217;
+            background-color: #080a25;
             color: #333;
             text-align: center;
         }
